# canaryai

./: .gitignore  LICENSE  README.md  release.sh
CanaryAIApp/: Package.swift  build.sh  make_icon.swift
CanaryAIApp/Sources/: AlertRow.swift  CanaryAIApp.swift  ContentView.swift  Models.swift  ScannerService.swift  SettingsView.swift
Casks/: canaryai.rb
Formula/: canaryai.rb
canaryai/: pyproject.toml
canaryai/src/canaryai/: __init__.py  cli.py  models.py  parser.py  reporter.py  scanner.py
canaryai/src/canaryai/rules/: __init__.py  exfiltration.py  loader.py
canaryai/src/canaryai/rules/builtin/: CONTRIBUTING.md  backdoor.yaml  commands.yaml  docker.yaml  exfiltration.yaml  macos.yaml  network.yaml  recon.yaml
